force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Auto_Renew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contract Auto Renew</label>
    <type>Checkbox</type>
</CustomField>