force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Billing_Currency__c</fullName>
    <formula>Text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Currency</label>
    <type>Text</type>
</CustomField>