force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Cancellation_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Cancellation_Terms_Days__c</fullName>
    <label>Cancellation Terms (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>