force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Contract_Length__c</fullName>
    <inlineHelpText>Length of Contract (In Months).  If your contract does not allow you to override the default Contract Length policy, this field should be left blank.</inlineHelpText>
    <label>Contract Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>