force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Custom_Actions__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Custom_Actions__c</fullName>
    <formula>HYPERLINK(&apos;/apex/CHANNEL_ORDERS__COA_CloneServiceOrder?id=&apos;+Id , $Label.channel_orders__Custom_Action_Clone)&amp;&apos; &apos;&amp;IF( CHANNEL_ORDERS__Service_Order_Status1__c == &apos;Received&apos;, &apos;| &apos;+HYPERLINK(&apos;/apex/CHANNEL_ORDERS__COA_RecallServiceOrder?id=&apos;+Id, $Label.channel_orders__Custom_Action_Recall)&amp;&apos; &apos;, &apos;&apos;)</formula>
    <label>Custom Actions</label>
    <type>Text</type>
</CustomField>