force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Billing_City__c</fullName>
    <label>Customer Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>