force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Billing_State__c</fullName>
    <label>Customer Billing State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>