force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Billing_Street__c</fullName>
    <label>Customer Billing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>