force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Org_ID__c</fullName>
    <inlineHelpText>Please note that Org IDs are case sensitive.</inlineHelpText>
    <label>Org ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>