force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Customer_Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Customer_Shipping_Zip_Postal_Code__c</fullName>
    <label>Customer Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>