force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Date_Customer_Accepted_SFDC_Svc_Agrmnt__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Date_Customer_Accepted_SFDC_Svc_Agrmnt__c</fullName>
    <description>Date that the customer accepted the SFDC Service Agreement (FOR OEMs only)</description>
    <inlineHelpText>Date that the customer accepted the SFDC Service Agreement (FOR OEMs only)</inlineHelpText>
    <label>Date Customer Accepted SFDC Agreement</label>
    <type>Date</type>
</CustomField>