force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Date_Service_Order_Received_by_SFDC__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Date_Service_Order_Received_by_SFDC__c</fullName>
    <inlineHelpText>The date the service order was received by salesforce.com</inlineHelpText>
    <label>Date Service Order Received by SFDC</label>
    <type>DateTime</type>
</CustomField>