force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Default_Auto_Renew_Policy__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Default_Auto_Renew_Policy__c</fullName>
    <formula>text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Auto_Renew_Policy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Auto Renew Policy</label>
    <type>Text</type>
</CustomField>