force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Default_Contract_Length_Policy_Months__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Default_Contract_Length_Policy_Months__c</fullName>
    <formula>text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Length_Months__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Contract Length Policy (Months)</label>
    <type>Text</type>
</CustomField>