force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Full_Customer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Full_Customer_Company_Name__c</fullName>
    <description>This formula field should be only used in places where we need to show both old and new orders.</description>
    <formula>IF( CHANNEL_ORDERS__Created_with_new_COA__c,
    CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c,
    CHANNEL_ORDERS__Customer_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Customer Company Name</label>
    <type>Text</type>
</CustomField>