force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Invoice_Description__c</fullName>
    <label>SFDC Invoice Description</label>
    <type>TextArea</type>
</CustomField>