force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Is_Contract_Switch__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Is_Contract_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Change</label>
    <type>Checkbox</type>
</CustomField>