force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Note__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Note__c</fullName>
    <formula>&quot;Auto Renew and Contract Term are established on Initial orders.  All Add on orders will follow the terms as defined in your agreement with salesforce.com.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Note:</label>
    <type>Text</type>
</CustomField>