force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Order_Submitted__c</fullName>
    <label>Order Submitted</label>
    <type>DateTime</type>
</CustomField>