force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Product_Lines__c</fullName>
    <label># of Products Lines</label>
    <summaryForeignKey>CHANNEL_ORDERS__Service_Order_Detail__c.CHANNEL_ORDERS__Partner_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>