force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Renewal_Terms__c</fullName>
    <label>Renewal Terms (Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>