force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Send_Order__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Send_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Order</label>
    <type>Checkbox</type>
</CustomField>