force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Service_Order_Status1__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Service_Order_Status1__c</fullName>
    <formula>text( CHANNEL_ORDERS__Service_Order_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Order Status</label>
    <type>Text</type>
</CustomField>