force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>