force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Submitted_By_Email__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Submitted_By_Email__c</fullName>
    <label>Submitted by email</label>
    <type>Email</type>
</CustomField>