force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__Version__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Version__c</fullName>
    <label>COA Package Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>