force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/fields/CHANNEL_ORDERS__X62Org_To_Partner_Org_Email__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__X62Org_To_Partner_Org_Email__c</fullName>
    <label>62Org To Partner Org Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>