force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__Billing_Country_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Billing_Country_Code</fullName>
    <active>false</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Billing_Country__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>