force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__Contract_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Contract_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( CHANNEL_ORDERS__Partner_Contract_Rules__c )</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Partner_Contract_Rules__c</errorDisplayField>
    <errorMessage>Contract is a required field.</errorMessage>
</ValidationRule>