force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__Contract_Length_cannot_be_changed_addon.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Contract_Length_cannot_be_changed_addon</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Contract_Length__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>