force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__DatePartnerReceivedCustomerOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__DatePartnerReceivedCustomerOrder</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>