force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__OrderTypeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__OrderTypeRequired</fullName>
    <active>true</active>
    <description>Need to select a type of Order</description>
    <errorConditionFormula>ISBLANK( TEXT(CHANNEL_ORDERS__Order_Type__c))</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Order_Type__c</errorDisplayField>
    <errorMessage>You must select an Order Type.</errorMessage>
</ValidationRule>