force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__Org_ID_is_invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__Org_ID_is_invalid</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>