force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__SendOrderOnInsert.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__SendOrderOnInsert</fullName>
    <active>false</active>
    <description>Send order checkbox must be always false on insert</description>
    <errorConditionFormula>AND (
       ISNEW(),
       CHANNEL_ORDERS__Send_Order__c = true
)</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Send_Order__c</errorDisplayField>
    <errorMessage>Send order must be false when first creating a Service order</errorMessage>
</ValidationRule>