force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/validationRules/CHANNEL_ORDERS__StartDate_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CHANNEL_ORDERS__StartDate_is_Required</fullName>
    <active>true</active>
    <description>Deprecated</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>CHANNEL_ORDERS__Service_Start_Date__c</errorDisplayField>
    <errorMessage>(deprecated)</errorMessage>
</ValidationRule>