force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Customer_Name__c</columns>
    <columns>CHANNEL_ORDERS__Customer_Org_ID__c</columns>
    <columns>CHANNEL_ORDERS__Auto_Renew__c</columns>
    <columns>CHANNEL_ORDERS__Contract_Length__c</columns>
    <columns>CHANNEL_ORDERS__Service_Order_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>