force-app/main/default/objects/CHANNEL_ORDERS__Service_Order__c/listViews/CHANNEL_ORDERS__Monica_Service_Order.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__Monica_Service_Order</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>CHANNEL_ORDERS__Service_Order_Status1__c</columns>
    <columns>CHANNEL_ORDERS__Partner_Contract_Rules__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>lam</value>
    </filters>
    <label>Monica Service Order</label>
</ListView>